UI bug fix to align title for each page

--- a/src/pages/About.module.scss
+++ b/src/pages/About.module.scss
@@ -1,6 +1,5 @@
 .About {
-  color: yellow;
-}
-.Title {
-  opacity: 1;
+  color: orange;
+  display: flex;
+  flex-direction: column;
 }
