--- a/src/pages/Archives.module.scss
+++ b/src/pages/Archives.module.scss
@@ -1,5 +1,7 @@
 .Archives {
   color: orange;
+  display: flex;
+  flex-direction: column;
 }
 .Archive {
   color: gray;
